fix cpp template (new cmake routine)

--- a/hw1_cpp/CMakeLists.txt
+++ b/hw1_cpp/CMakeLists.txt
@@ -1,13 +1,13 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.16)
 project(example)
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+list(PREPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
-# libigl
-option(LIBIGL_WITH_OPENGL            "Use OpenGL"         ON)
-option(LIBIGL_WITH_OPENGL_GLFW       "Use GLFW"           ON)
+# Libigl
+include(libigl)
 
-find_package(LIBIGL REQUIRED QUIET)
+# Enable the target igl::glfw
+igl_include(glfw)
 
 set(
         main_src
@@ -19,4 +19,4 @@ set(
 
 # Add your project files
 add_executable(${PROJECT_NAME} ${main_src})
-target_link_libraries(${PROJECT_NAME} igl::core igl::opengl_glfw)
+target_link_libraries(${PROJECT_NAME} PUBLIC igl::glfw)
